fix: CSS fix to remove occasional display of horizontal scrollers
Jira Issue DD-1729

Sync to source repo @b5c750f3ba17383ca67f937784cc51aa6c2b13a6

--- a/css/searchPanes.bootstrap4.css
+++ b/css/searchPanes.bootstrap4.css
@@ -133,6 +133,9 @@ div.dt-button-collection {
 div.dtsp-panesContainer {
   width: 100%;
 }
+div.dtsp-panesContainer div.dataTables_wrapper {
+  width: 100%;
+}
 
 div.dtsp-searchPanes {
   display: flex;
